# Microsoft-Email-Manager-Desktop

./: .gitignore  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: SECURITY-REVIEW.md
docs/superpowers/plans/: 2026-06-25-implementation-plan.md
docs/superpowers/specs/: 2026-06-25-desktop-ui-and-onboarding-design.md
scripts/: gen-icon.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  accounts_auth.rs  background.rs  commands.rs  crypto.rs  db.rs  error.rs  export.rs  graph.rs  imap_client.rs  lib.rs  main.rs  models.rs  security.rs  state.rs
src/components/: AccountConfigModal.svelte  Accounts.svelte  AddEmail.svelte  Categories.svelte  Dashboard.svelte  Emails.svelte  Icon.svelte  MnemonicInput.svelte  OtpInput.svelte  QuickView.svelte  Select.svelte  Settings.svelte  Sidebar.svelte  Spinner.svelte  Unlock.svelte
src/components/onboarding/: OnboardingWizard.svelte
src/lib/: api.ts  appstate.svelte.ts  brandLogos.ts  i18n.svelte.ts  quickview.svelte.ts  theme.svelte.ts  toast.svelte.ts  types.ts  verifyCode.ts
